--- a/mailing/templates/mailing/includes/inc_menu.html
+++ b/mailing/templates/mailing/includes/inc_menu.html
@@ -1,32 +1,38 @@
- <div class="collapse text-bg-dark" id="navbarHeader">
+<div class="collapse text-bg-dark" id="navbarHeader">
     <div class="container">
-      <div class="row">
-        <div class="col-sm-8 col-md-7 py-4">
-          <h4>Сервис рассылки</h4>
-          <p class="text-body-secondary">Письмецо</p>
+        <div class="row">
+            <div class="col-sm-8 col-md-7 py-4">
+                <h4>Сервис рассылки</h4>
+                <p class="text-body-secondary">Письмецо</p>
+            </div>
+            <div class="col-sm-4 offset-md-1 py-4">
+                <h4>Навигация</h4>
+                <ul class="list-unstyled">
+                    {% if user.is_authenticated %}
+                    <li><a href="{% url 'mailing:client_list' %}" class="text-white">Клиенты</a></li>
+                    <li><a href="{% url 'mailing:message_list' %}" class="text-white">Сообщения</a></li>
+                    <li><a href="{% url 'mailing:mailing_list' %}" class="text-white">Рассылка</a></li>
+                    <li><a href="{% url 'mailing:statistics' %}" class="text-white">Статистика</a></li>
+                    {% endif %}
+                    <li><a href="{% url 'mailing:blog_list' %}" class="text-white">Блог</a></li>
+                    {% if user.is_authenticated %}
+                    <li><a href="{% url 'users:logout' %}" class="text-white">Выход</a></li>
+                    {% else %}
+                    <li><a href="{% url 'users:login' %}" class="text-white">Вход</a></li>
+                    <li><a href="{% url 'users:register' %}" class="text-white">Регистрация</a></li>
+                    {% endif %}
+                </ul>
+            </div>
         </div>
-        <div class="col-sm-4 offset-md-1 py-4">
-          <h4>Навигация</h4>
-          <ul class="list-unstyled">
-            <li><a href="{% url 'mailing:client_list' %}" class="text-white">Клиенты</a></li>
-            <li><a href="#" class="text-white">Сообщения</a></li>
-            <li><a href="#" class="text-white">Рассылка</a></li>
-            <li><a href="{% url 'mailing:blog_list' %}" class="text-white">Блог</a></li>
-            тут кнопки аутентификации
-            <li><a href="#" class="text-white">Вход</a></li>
-            <li><a href="#" class="text-white">Регистрация</a></li>
-
-          </ul>
-        </div>
-      </div>
     </div>
-  </div>
-  <div class="navbar navbar-dark bg-dark shadow-sm">
+</div>
+<div class="navbar navbar-dark bg-dark shadow-sm">
     <div class="container">
-      <a href="#" class="navbar-brand d-flex align-items-center">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <a href="#" class="navbar-brand d-flex align-items-center">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
+                aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
     </div>
-  </div>
+</div>
