--- a/mailing/templates/mailing/mailing_detail.html
+++ b/mailing/templates/mailing/mailing_detail.html
@@ -1,31 +1,29 @@
 {% extends 'mailing/home.html' %}
 {% load my_tags %}
 {% block content %}
-<h1 align="center">Клиенты</h1>
 <div class="album py-5 bg-body-tertiary">
     <div class="container">
+
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            {% for client in object_list %}
             <div class="col">
                 <div class="card shadow-sm">
                     <div class="card-body">
-                        <p class="card-text">{{ client.full_name }}</p>
+                        <p class="card-text">Дата и время отправки: {{ object.time_sending }}</p>
+                        <p class="card-text">Периодичность: {{ object.periodicity }}</p>
+                        <p class="card-text">Статус: {{ object.status }}</p>
+                        <p class="card-text">Клиент: {{ object.clients }}</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a class="btn btn-primary" href="{% url 'mailing:client_detail' client.pk %}"
-                                   role="button">Просмотр</a>
-                                <a class="btn btn-primary" href="{% url 'mailing:client_update' client.pk %}"
-                                   role="button">Редактировать</a>
-                                <a class="btn btn-primary" href="{% url 'mailing:client_delete' client.pk %}"
-                                   role="button">Удалить</a>
+                                <a class="btn btn-primary" href="{% url 'mailing:mailing_list' %}"
+                                   role="button">Назад</a>
                             </div>
                             <small class="text-body-secondary">9 mins</small>
                         </div>
                     </div>
                 </div>
             </div>
-            {% endfor %}
         </div>
+
     </div>
 </div>
 {% endblock %}
