--- a/mailing/templates/mailing/mailing_list.html
+++ b/mailing/templates/mailing/mailing_list.html
@@ -1,22 +1,22 @@
 {% extends 'mailing/home.html' %}
 {% load my_tags %}
 {% block content %}
-<h1 align="center">Клиенты</h1>
+<h1 align="center">Рассылки</h1>
 <div class="album py-5 bg-body-tertiary">
     <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            {% for client in object_list %}
+            {% for mailing in object_list %}
             <div class="col">
                 <div class="card shadow-sm">
                     <div class="card-body">
-                        <p class="card-text">{{ client.full_name }}</p>
+                        <p class="card-text">{{ mailing.time_sending }}</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a class="btn btn-primary" href="{% url 'mailing:client_detail' client.pk %}"
+                                <a class="btn btn-primary" href="{% url 'mailing:mailing_detail' mailing.pk %}"
                                    role="button">Просмотр</a>
-                                <a class="btn btn-primary" href="{% url 'mailing:client_update' client.pk %}"
+                                <a class="btn btn-primary" href="{% url 'mailing:mailing_update' mailing.pk %}"
                                    role="button">Редактировать</a>
-                                <a class="btn btn-primary" href="{% url 'mailing:client_delete' client.pk %}"
+                                <a class="btn btn-primary" href="{% url 'mailing:mailing_delete' mailing.pk %}"
                                    role="button">Удалить</a>
                             </div>
                             <small class="text-body-secondary">9 mins</small>
